// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`noise > with the exp curve schedules the same graph 1`] = `
[
  [
    "ctx",
    "create:bufferSource",
    "bufferSource#2",
  ],
  [
    "bufferSource#2",
    "=buffer",
    "buffer#1",
  ],
  [
    "bufferSource#2",
    "=loop",
    true,
  ],
  [
    "bufferSource#2.playbackRate",
    "value",
    1.0499999999999998,
  ],
  [
    "bufferSource#2.playbackRate",
    "setValueAtTime",
    1.0499999999999998,
    2,
  ],
  [
    "ctx",
    "create:filter",
    "filter#3",
  ],
  [
    "filter#3",
    "=type",
    "bandpass",
  ],
  [
    "filter#3.Q",
    "value",
    2,
  ],
  [
    "filter#3.frequency",
    "setValueAtTime",
    20,
    2,
  ],
  [
    "filter#3.frequency",
    "exponentialRampToValueAtTime",
    3000,
    2.5,
  ],
  [
    "ctx",
    "create:gain",
    "gain#4",
  ],
  [
    "gain#4.gain",
    "setValueAtTime",
    0.0001,
    2,
  ],
  [
    "gain#4.gain",
    "linearRampToValueAtTime",
    0.3,
    2.002,
  ],
  [
    "gain#4.gain",
    "exponentialRampToValueAtTime",
    0.0001,
    2.5,
  ],
  [
    "bufferSource#2",
    "connect",
    "filter#3",
  ],
  [
    "filter#3",
    "connect",
    "gain#4",
  ],
  [
    "gain#4",
    "connect",
    "gain#1",
  ],
  [
    "bufferSource#2",
    "start",
    2,
  ],
  [
    "bufferSource#2",
    "stop",
    2.56,
  ],
  [
    "bufferSource#2",
    "=onended",
    "<function>",
  ],
  [
    "gain#4",
    "disconnect",
  ],
  [
    "filter#3",
    "disconnect",
  ],
]
`;

exports[`noise > with the linear curve schedules the same graph 1`] = `
[
  [
    "ctx",
    "create:bufferSource",
    "bufferSource#2",
  ],
  [
    "bufferSource#2",
    "=buffer",
    "buffer#1",
  ],
  [
    "bufferSource#2",
    "=loop",
    true,
  ],
  [
    "bufferSource#2.playbackRate",
    "value",
    1.0499999999999998,
  ],
  [
    "bufferSource#2.playbackRate",
    "setValueAtTime",
    1.0499999999999998,
    2,
  ],
  [
    "ctx",
    "create:filter",
    "filter#3",
  ],
  [
    "filter#3",
    "=type",
    "highpass",
  ],
  [
    "filter#3.Q",
    "value",
    1,
  ],
  [
    "filter#3.frequency",
    "setValueAtTime",
    900,
    2,
  ],
  [
    "filter#3.frequency",
    "exponentialRampToValueAtTime",
    20,
    2.5,
  ],
  [
    "ctx",
    "create:gain",
    "gain#4",
  ],
  [
    "gain#4.gain",
    "setValueAtTime",
    0.0001,
    2,
  ],
  [
    "gain#4.gain",
    "linearRampToValueAtTime",
    0.2,
    2.003,
  ],
  [
    "gain#4.gain",
    "linearRampToValueAtTime",
    0.0001,
    2.5,
  ],
  [
    "bufferSource#2",
    "connect",
    "filter#3",
  ],
  [
    "filter#3",
    "connect",
    "gain#4",
  ],
  [
    "gain#4",
    "connect",
    "gain#1",
  ],
  [
    "bufferSource#2",
    "start",
    2,
  ],
  [
    "bufferSource#2",
    "stop",
    2.56,
  ],
  [
    "bufferSource#2",
    "=onended",
    "<function>",
  ],
  [
    "gain#4",
    "disconnect",
  ],
  [
    "filter#3",
    "disconnect",
  ],
]
`;

exports[`tone > with lp schedules the same graph 1`] = `
[
  [
    "ctx",
    "create:oscillator",
    "oscillator#2",
  ],
  [
    "oscillator#2",
    "=type",
    "sawtooth",
  ],
  [
    "oscillator#2.frequency",
    "setValueAtTime",
    150,
    2,
  ],
  [
    "oscillator#2.frequency",
    "exponentialRampToValueAtTime",
    10,
    2.5,
  ],
  [
    "ctx",
    "create:filter",
    "filter#3",
  ],
  [
    "filter#3",
    "=type",
    "lowpass",
  ],
  [
    "filter#3.frequency",
    "setValueAtTime",
    600,
    2,
  ],
  [
    "filter#3.Q",
    "value",
    4,
  ],
  [
    "oscillator#2",
    "connect",
    "filter#3",
  ],
  [
    "ctx",
    "create:gain",
    "gain#4",
  ],
  [
    "gain#4.gain",
    "setValueAtTime",
    0.0001,
    2,
  ],
  [
    "gain#4.gain",
    "linearRampToValueAtTime",
    0.3,
    2.004,
  ],
  [
    "gain#4.gain",
    "exponentialRampToValueAtTime",
    0.0001,
    2.5,
  ],
  [
    "filter#3",
    "connect",
    "gain#4",
  ],
  [
    "gain#4",
    "connect",
    "gain#1",
  ],
  [
    "oscillator#2",
    "start",
    2,
  ],
  [
    "oscillator#2",
    "stop",
    2.55,
  ],
  [
    "oscillator#2",
    "=onended",
    "<function>",
  ],
  [
    "gain#4",
    "disconnect",
  ],
  [
    "filter#3",
    "disconnect",
  ],
]
`;

exports[`tone > without lp schedules the same graph 1`] = `
[
  [
    "ctx",
    "create:oscillator",
    "oscillator#2",
  ],
  [
    "oscillator#2",
    "=type",
    "square",
  ],
  [
    "oscillator#2.frequency",
    "setValueAtTime",
    10,
    2,
  ],
  [
    "oscillator#2.frequency",
    "exponentialRampToValueAtTime",
    400,
    2.5,
  ],
  [
    "ctx",
    "create:gain",
    "gain#3",
  ],
  [
    "gain#3.gain",
    "setValueAtTime",
    0.0001,
    2,
  ],
  [
    "gain#3.gain",
    "linearRampToValueAtTime",
    0.2,
    2.001,
  ],
  [
    "gain#3.gain",
    "exponentialRampToValueAtTime",
    0.0001,
    2.5,
  ],
  [
    "oscillator#2",
    "connect",
    "gain#3",
  ],
  [
    "gain#3",
    "connect",
    "gain#1",
  ],
  [
    "oscillator#2",
    "start",
    2,
  ],
  [
    "oscillator#2",
    "stop",
    2.55,
  ],
  [
    "oscillator#2",
    "=onended",
    "<function>",
  ],
  [
    "gain#3",
    "disconnect",
  ],
]
`;
